# airborne

./: .gitignore  .pre-commit-config.yaml  AIRCRAFT_SYSTEMS_DESIGN.md  CLAUDE.md  DEMO.md  HOW_TO_PLAY.md  PROPULSION_INTEGRATION_PLAN.md  README.md  REFACTOR_KEY_HANDLING.md  airborne.spec  libfmod.dylib  mypy.ini  plan.md  pyproject.toml  test.aiff  test_drag_analysis.py  test_propeller_debug.py
assets/models/: README.md
config/: atc_en.yaml  logging.yaml  pilot_en.yaml  radio_effects.yaml  speech.yaml  speech_en.yaml
config/aircraft/: cessna172.yaml
config/checklists/: cessna172_after_landing.yaml  cessna172_before_landing.yaml  cessna172_before_start.yaml  cessna172_before_takeoff.yaml  cessna172_engine_start.yaml  cessna172_shutdown.yaml  cessna172_takeoff.yaml
config/input_bindings/: flight_control_actions.yaml  handler_priorities.yaml  menu_actions.yaml
config/keymaps/: cessna172_panels.yaml
config/panels/: cessna172_panel.yaml
data/airports/: taxiway_cache_test.json
data/aviation/: callsigns.yaml
docs/: ATC_RADIO_EFFECTS.md  TTS_SYSTEM.md
docs/speech/: KOKORO_LANGUAGES.md  KOKORO_SETUP.md  (+2 more)
scripts/: README_KOKORO.md  build_app.sh  demo_autopilot.py  demo_ground_ops.py  demo_ground_ops_audio.py  download_airport_data.py  generate_atc_pilot_speech.py  generate_atc_speech.py  generate_atis_speech.py  generate_checklist_tts.py  generate_cockpit_speech.py  generate_instrument_tts.py  generate_placeholder_audio.py  generate_radio_static.py  generate_sounds.py  generate_speech.py  generate_taxiway_cache.py  generate_tts.py  import_eurofly_sounds.py  install_kokoro.sh  listen_voices.py  listen_voices_auto.py  listen_voices_french.py  sample_voices.py  test_atc_with_static.py  test_atis_announcement.py  test_battery_integration.py  test_battery_sequence.py  test_fmod_codecs.py  test_fmod_mp3.py  test_fmod_ogg.py  test_instrument_debug.py  test_instrument_keys.py  test_kokoro.py  test_panel_ctrl.py  test_radio_effect.py  test_radio_simple.py  test_tts.py
tests/: conftest.py  test_main.py
(+296 files in other folders)
